--- a/cards/styles.css
+++ b/cards/styles.css
@@ -26,7 +26,7 @@ body {
 
 
 .main-container__title {
-    
+
     margin: 8% 0 0 8%;
     font-weight: 800;
     font-size: 3rem;
@@ -55,7 +55,7 @@ body {
     justify-content: center;
     flex-direction: row;
     gap: 20px;
-    z-index: 2;
+
 }
 
 .card {
@@ -68,7 +68,9 @@ body {
     flex-direction: row;
     position: relative;
     cursor: pointer;
-    z-index: 2;
+    backdrop-filter: blur(3px);
+    box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
 }
 
 .card__title {
@@ -89,75 +91,101 @@ body {
     top: -10%;
     z-index: 2;
 }
+
 .card:hover {
-    background-color: rgba(200, 239, 141, 0.9);
+    backdrop-filter: blur(5px);
+    overflow: hidden;
+    background: linear-gradient(0deg, rgba(121, 200, 0, 0.4), rgba(121, 200, 0, 0.4)),
+        linear-gradient(180deg, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0) 100%);
 }
+
 .leaf-container__image--top {
     top: 10%;
     left: 0;
     width: 170px;
     height: 170px;
 }
-.leaf-container__image--top, .leaf-container__image--bottom{
+
+.leaf-container__image--top,
+.leaf-container__image--bottom {
     position: absolute;
     transition: 0.2s ease-in;
 }
+
 .leaf-container__image {
     width: 100%;
     height: 100%;
 }
+
 .leaf-container__image--bottom {
     bottom: 30%;
     right: 30%;
     width: 100px;
     height: 100px;
 }
+
 .card__bubble-big {
     position: absolute;
     z-index: -2;
     width: 50%;
     height: 100%;
 }
+
 .card__bubble-little {
     z-index: -2;
     width: 100%;
     height: 100%;
 }
-.animate-big {
-    transform: translateX(-30%) translateY(-20%);
-    transition: 1s ease;
-    
+
+.card__bubble {
+    z-index: -2;
+    position: absolute;
 }
-.animate-little {
-    transform: translateX(20%);
-    transition: 1s ease;
+
+.bubble-animation {
+    z-index: -2;
+    transform: translate(42px, 18px);
+    transition: ease-out 3s;
 }
+
 .decor-container {
     position: absolute;
     width: 100vw;
     height: 100svh;
 }
+
 .decor-container__yellow-circle {
     position: absolute;
-    width: 17%;
-    height:50%;
+    width: 17vw;
+    height: 50vh;
     right: 0;
     top: -10%;
 }
+
 .decor-container__grey-sprinkles {
     position: absolute;
     width: 5%;
-    height:10%;
+    height: 10%;
     left: 0;
     bottom: 30%;
 }
+
 .decor-container__brown-sprinkles {
     position: absolute;
     width: 5%;
-    height:10%;
+    height: 10%;
     left: 50%;
     top: 0;
 }
+
+.inivisible {
+    width: 100%;
+    height: 100%;
+    background-color: none;
+    z-index: 10;
+    position: absolute;
+}
+
 @media (max-width: 1200px) {
     .main-container__title {
         margin: 10% 0 0 10%;
@@ -194,6 +222,7 @@ body {
         bottom: 50% !important;
     }
 }
+
 @media (max-width: 992px) {
     .main-container__title {
         margin: 12% 0 0 12%;
@@ -230,8 +259,9 @@ body {
         width: 70px;
         height: 70px;
     }
+
     .card__image {
-        top: 0; 
+        top: 0;
     }
 }
 
@@ -270,21 +300,25 @@ body {
         height: 100px;
         right: 0;
     }
+
     .card__image {
-        top: 0; 
+        top: 0;
     }
+
     .decor-container__yellow-circle {
         width: 25%;
         height: 25%;
     }
+
     .decor-container__grey-sprinkles {
         width: 10%;
-        height:10%;
-        
+        height: 10%;
+
     }
+
     .decor-container__brown-sprinkles {
         width: 10%;
-        height:10%;
+        height: 10%;
         top: 5%;
     }
 }
@@ -324,18 +358,21 @@ body {
         height: 50px;
         right: 20px !important;
     }
+
     .decor-container__yellow-circle {
         width: 25%;
         height: 25%;
     }
+
     .decor-container__grey-sprinkles {
         width: 10%;
-        height:10%;
-        
+        height: 10%;
+
     }
+
     .decor-container__brown-sprinkles {
         width: 10%;
-        height:10%;
+        height: 10%;
         top: 5%;
     }
 }
@@ -376,8 +413,9 @@ body {
         width: 40px;
         height: 40px;
     }
-    
+
 }
+
 @media (max-width:320px) {
     .main-container__title {
         margin: 25% 0 0 25%;
@@ -414,19 +452,21 @@ body {
         width: 60px;
         height: 60px;
     }
+
     .decor-container__yellow-circle {
         width: 25%;
         height: 25%;
     }
+
     .decor-container__grey-sprinkles {
         width: 15%;
-        height:10%;
-        
+        height: 10%;
+
     }
+
     .decor-container__brown-sprinkles {
         width: 10%;
-        height:10%;
+        height: 10%;
         top: 5%;
     }
 }
-
