--- a/cards/styles.css
+++ b/cards/styles.css
@@ -156,8 +156,8 @@ body {
 
 .decor-container__yellow-circle {
     position: absolute;
-    width: 17vw;
-    height: 50vh;
+    width: 17%;
+    height: 50%;
     right: 0;
     top: -10%;
 }
@@ -262,6 +262,9 @@ body {
 
     .card__image {
         top: 0;
+    }
+    .decor-container__yellow-circle {
+        height: 20%;
     }
 }
 
@@ -412,6 +415,7 @@ body {
     .leaf-container__image--bottom {
         width: 40px;
         height: 40px;
+        bottom: 30%;
     }
 
 }
